Replaced all contacts images with FontAwesome and fixed a few alignment issues

--- a/styles/style.less
+++ b/styles/style.less
@@ -56,7 +56,6 @@ header {
 footer {
     background-color:  #445161;
     color:  #ffffff;
-    padding: 0 180px;
     section {
         width: 800px;
         margin: 0 auto;
@@ -69,8 +68,8 @@ footer {
             text-align: center;
         }
         form {
-            display: inline-block;
             width: 500px;
+            display: inline-block;
             input {
                 border-radius: 5px;
                 width: 500px;
@@ -105,6 +104,49 @@ footer {
             }
         }
         .contacts {
+            display: inline-block;
+            vertical-align: top;
+            margin-left: 20px;
+            ul {
+                list-style: none;
+                margin: 0;
+                padding: 0;
+                li {
+                    margin-bottom: 10px;
+                    height: 30px;
+                    p {
+                        margin: 0;
+                        margin-left: 10px;
+                        display: inline-block;
+                        color: white;
+                    }
+                    i {
+                        display: inline-block;
+                        font-size: 1.8em;
+                        vertical-align: middle;
+                    }
+                    a {
+                        text-decoration: none;
+                        height: 44px;
+                        width: 44px;
+                        margin-right: 2px;
+                        i {
+                            height: inherit;
+                            width: inherit;
+                            display: inline-block;
+                            background-color: white;
+                            border-radius: 50%;
+                            color: #445161;
+                            text-align: center;
+                            line-height: 44px;
+                        }
+                    }
+                }
+            }
+        }
+        
+        /*
+        .contacts {
             vertical-align: top;
             display: inline-block;
             ul {
@@ -113,8 +155,18 @@ footer {
                 li {
                     height: 26px;
                     line-height: 24px;
-                    margin-bottom: 10px;
-                    vertical-align: middle;
+                    margin-bottom: 12px;
+                    p {
+                        float: left;
+                        margin: 0;
+                        color: white;
+                        margin-left: 10px;
+                        height: 50px;
+                    }
+                    i {
+                        font-size: 1.8em;
+                        float: left;
+                    }
                     img {
                         vertical-align: middle;
                     }
@@ -130,7 +182,7 @@ footer {
                     }
                 }
             }
-        }
+        }  */
     }
 }
 
